# XCMTemplate

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker.sh  package-lock.json
contract/flipper/: lib.rs
dapps/basic_contract_caller/: Cargo.toml  lib.rs
dapps/basic_contract_caller/other_contract/: Cargo.toml  lib.rs
dapps/evm2/: README.md  index.html  package.json
dapps/evm2/block/: .env.example  .gitignore  README.md  package.json  truffle-config.js
dapps/evm2/block/contracts/: Block.sol
dapps/evm2/block/migrations/: 2_deploy_contracts.js
dapps/evm2/block/scripts/: demo-block-hash.js  package.json
dapps/evm2/flipper/: .env.example  README.md  package.json  truffle-config.js
dapps/evm2/flipper/contracts/: Flipper.sol  Migrations.sol
dapps/evm2/flipper/contracts/lib/: RandomNumber.sol  VRFChainlink.sol  VRFD20.sol
dapps/evm2/flipper/contracts/vrf/interfaces/: VRFCoordinatorV2Interface.sol
dapps/evm2/flipper/migrations/: 2_deploy_contracts.js
dapps/evm2/flipper/scripts/: demo-moonbase-ethers.js  demo.js  package.json
dapps/evm2/flipper/test/: test_ChainlinkVRF.js  test_Flipper.js
dapps/evm2/flipper_game/: README.md  truffle-config.js
dapps/evm2/flipper_game/contracts/: FlipperGame.sol
dapps/evm2/flipper_game/contracts/lib/: FlipperGameRandomNumber.sol
dapps/evm2/flipper_game/contracts/precompiles/randomness/: Randomness.sol
dapps/evm2/flipper_game/migrations/: 2_deploy_contracts.js
dapps/evm2/flipper_game/scripts/: demo-moonbeam-vrf-flipper-game-part1.js  demo-moonbeam-vrf-flipper-game-part2.js  package.json
dapps/evm2/randomness/: .env.example  README.md  truffle-config.js
dapps/evm2/randomness/contracts/: Flipper.sol
dapps/evm2/randomness/contracts/lib/: RandomNumber.sol
dapps/evm2/randomness/contracts/vrf/: VRFConsumerBaseV2.sol
dapps/evm2/randomness/migrations/: 2_deploy_contracts.js
dapps/evm2/randomness/scripts/: demo-chainlink-vrf-on-ethereum-sepolia.js  demo-moonbeam-vrf-on-moonbase-alpha-part1.js  demo-moonbeam-vrf-on-moonbase-alpha-part2.js  demo-moonbeam-vrf-on-moonbase-alpha.js
dapps/evm2/randomness/test/: test_ChainlinkVRF.js  test_Flipper.js  test_MoonbaseVRF.js
dapps/evm2/src/: style.css
dapps/evm2/src/utils/: chainConfig.ts
dapps/ink-python/example/: requirements.txt
dapps/ink-python/example/src/: app.py
dapps/ink-rust/IPSP22/contract/IPSP22/: Cargo.toml  lib.rs
dapps/ink-rust/flipper-game/: README.md
dapps/ink-rust/flipper-game/contract/flipper-game/: Cargo.toml  lib.rs
dapps/ink-rust/flipper-game/lib/xvm-environment/: Cargo.toml
dapps/ink-rust/rand-future/: Cargo.toml  lib.rs
dapps/ink-rust/rand-future/oracle_contract/: lib.rs
dapps/ink-rust/wasm-flipper/: .gitignore  package.json
dapps/ink-rust/wasm-flipper/contract/flipper/: Cargo.toml  lib.rs  swanky.config.json
dapps/ink-rust/wasm-flipper/ui/components/: abi.ts  app.tsx
dapps/mydapp/: lib.rs
dapps/wasm-flipper/: README.md
dapps/xcm/unnamed/: Cargo.toml  README.md  lib.rs
dapps/xcm/unnamed/oracle_contract/: Cargo.toml  lib.rs
docker/: Dockerfile  docker.sh  quickstart-basic-contract-caller.sh  quickstart-chainlink-vrfd20.sh  quickstart-ipsp22.sh  quickstart-moonbeam-vrf-precompile-flipper-game.sh  quickstart-moonbeam-vrf-precompile.sh  quickstart-rand-future.sh  quickstart-randomness-vrfd20.sh  quickstart-randomness.sh  quickstart-unnamed.sh  quickstart.sh  replaceAbi.js  reset.sh  restart.sh  run-scn.sh  run.sh
docker/ink-python/: DockerfilePython  README.md  docker-compose.yml
docker/ink-python/src/: app.py
docker/utility/: base-ci-linux-config
mydapp/: Cargo.toml  lib.rs
