[package]
name = "rand_future"
version = "0.1.0"
authors = ["Luke Schoen <contact@clawbird.com>"]
edition = "2021"

[dependencies]
# ink = { version = "4.2.0", default-features = false }
ink = { git = 'https://github.com/ltfschoen/ink', branch = 'ltfschoen-env-offchain-test-set-block-number', default-features = false }

scale = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.7", default-features = false, features = ["derive"], optional = true }

oracle_contract = { path = "oracle_contract", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",

    # Note: The metadata generation step requires `std`. If we don't specify this the metadata
    # generation for our contract will fail with error:
    # the trait bound `OracleContractRef: StorageLayout` is not satisfied
    "oracle_contract/std",
]
ink-as-dependency = []
e2e-tests = []
