[package]
name = "oracle_contract"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
# ink = { version = "4.2.0", default-features = false }
ink = { git = 'https://github.com/ltfschoen/ink', branch = 'ltfschoen-env-offchain-test-set-block-number', default-features = false }
# hex = { version = "0.4.3", default-features = false }
ethers-core = { version = "2.0.7" }

scale = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.7", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
