[package]
name = "my_token"
version = "0.1.0"
authors = ["0xD1x0n"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
ink = { version = "4.2", default-features = false }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts/", tag = "3.1.1", default-features = false, features = ["psp22", "ownable"] }

scale = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.7", default-features = false, features = ["derive"], optional = true }


[dev-dependencies]
ink_e2e = { version = "4.2.0" }

[lib]
name = "my_token"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []
